@@ -1,3 +1,8 @@
+Wed Aug 29 10:42:08 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* configure.ac: Move bogus makefile content ...
+	* makefile.in: ... here.
+
 Wed Aug 29 10:15:33 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* m4/man-path-progs.m4: Define HAVE_WITH-ARG if the program is
